# contasaga

./: .env.example  .gitignore  README.md  pyproject.toml  railpack.json  railway.json
config/: admin_site.py  admin_urls.py  com.contasaga.daily-maintenance.plist.example  com.contasaga.deadline-reminders.plist.example  com.contasaga.export-worker.plist.example  com.contasaga.frequent-maintenance.plist.example  db_routers.py  r2-cors.example.json  urls.py
conturi/: admin.py  allocation_forms.py  allocation_urls.py  allocation_views.py  allocations.py  apps.py  auth_views.py  backends.py  forms.py  invitation_forms.py  invitation_views.py  invitations.py  managers.py  models.py  password_forms.py  password_views.py  services.py  urls.py
core/: admin.py  audit.py  checks.py  middleware.py  models.py  readiness.py  request_ip.py  views.py
docs/: BULK_INBOX_AND_MONTH_ARCHIVE.md  RAILWAY_DEPLOYMENT.md  RELEASE_READINESS.md  RELEASE_STATUS.md
documente/: access.py  admin.py  analysis.py  apps.py  archive.py  archive_views.py  classification.py  classification_views.py  extraction.py  filetypes.py  forms.py  inbox.py  inbox_views.py  models.py  processing.py  reading.py  segmentation.py  services.py  storage.py  storage_keys.py  upload.py  urls.py  views.py
exporturi/: access.py  admin.py  apps.py  models.py  services.py  urls.py  views.py
firme/: admin.py  apps.py  configuration_forms.py  configuration_services.py  configuration_views.py  forms.py  models.py  services.py  urls.py  views.py
logistica/: admin.py  apps.py  forms.py  models.py  services.py  urls.py  (+1 more)
(+128 files in other folders)
