[project]
name = "conta-saga"
version = "0.1.0"
description = "Platformă colaborativă pentru colectarea și verificarea documentelor contabile"
requires-python = ">=3.12,<3.13"
dependencies = [
    "boto3>=1.35,<2",
    "Django>=5.2,<5.3",
    "gunicorn>=23,<24",
    "pillow>=11,<13",
    "pillow-heif>=1,<2",
    "psycopg[binary]>=3.2,<4",
    "pymupdf>=1.26,<2",
    "python-dotenv>=1.0,<2",
    "whitenoise>=6.9,<7",
]

[dependency-groups]
dev = [
    "pytest>=8.3,<9",
    "pytest-django>=4.9,<5",
    "ruff>=0.11,<1",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = ["test_*.py", "tests.py"]
addopts = "-q"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "DJ"]

[tool.ruff.format]
quote-style = "double"
